fix(CL-595): creating a gap between beta tag and text when translated to rtl language

--- a/src/web/CareLeavers.Web.Node/scss/partials/_phase-banner.scss
+++ b/src/web/CareLeavers.Web.Node/scss/partials/_phase-banner.scss
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   [dir="rtl"] & {
     margin-right: 0;
-    margin-left: 10px; // Creates the missing gap between tag and text
+    margin-left: inherit; // Creates the missing gap between tag and text
   }
 }
 
